# Huff_Curves_BR

./: .gitignore  README.md  Stations_Info.csv  index.html  pyproject.toml  setup.py
.claude/: launch.json
.claude/skills/: academic-paper  academic-paper-reviewer  academic-pipeline  deep-research
CoverLetter/: main.tex
assets/: logo_draft.html
docs/: README.md  app.js  app.js.bak  index.html  styles.css
docs/data/: analytics.json  manifest.json
manuscript/: OVERLEAF_UPLOAD.md  main.abs  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib  supplementary.aux  supplementary.bbl  supplementary.blg  supplementary.lof  supplementary.lot  supplementary.out  supplementary.tex
notes/: event_statistics.md  figure_captions_E5.md  file_inventory.md  hydro_impact_analysis.md  ietd_sensitivity.md  limitations_F4.md  literature_review_F1.md  methods_justifications.md  missing_information.md  paper_assets.md  q1_dominance_mechanism_F2.md  table_captions_E6.md
scripts/: analyse_diurnal_cycle.py  analyse_ietd_sensitivity.py  bootstrap_uncertainty.py  build_huff_diagnostics.py  build_web_assets.py  capture_website_panels.py  compose_website_figure.py  download_reference_layers.py  figstyle.py  patch_hydro_columns.py  plot_casestudy_dem.py  plot_casestudy_map.py  plot_diurnal_cycle.py  plot_huff_curves_paper.py  plot_huff_maps.py  plot_hydro_impact.py  plot_ietd_sensitivity_figure.py  plot_ietd_sensitivity_paper.py  plot_mae_dmax_quartiles.py  plot_maps_paper.py  plot_publication_maps.py  plot_quartile_percent_maps.py  plot_supplementary_inputs.py  prepare_ibge_reference_layers.py  run_huff_pipeline.py  run_hydro_impact.py
src/huff_curves_br/: __init__.py  ana.py  constants.py  events.py  geodata.py  huff.py  hydrology.py  maps.py  metrics.py  pipeline.py  reference.py  regional.py  series.py  stations.py
src/huff_curves_br.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_ana.py  test_events.py  test_huff.py  test_hydrology.py  test_metrics.py  test_pipeline.py  test_regional.py
(+20 files in other folders)
