[project]
name = "huff-curves-br"
version = "0.1.0"
description = "Download ANA sub-daily rainfall data and derive empirical Huff curves for Brazilian stations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.31",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
geo = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyogrio>=0.7",
]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

